--- a/style.css
+++ b/style.css
@@ -236,3 +236,68 @@ margin-top: 20px;
    width: 180px;
 
 }
+
+
+/* My Inspiration Section  */
+
+
+.container-div{
+
+
+    border: 2px solid red;
+    width: 1140px;
+    height: 650px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+
+}
+
+.titels{
+    border: 2px solid red;
+    text-align: center;
+    width: 70%;
+    margin:  0 auto;
+}
+.titels h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.titels p{
+
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-top: 30px;
+
+}
+
+.video{
+    width: 100%;
+    height: 500px;
+    margin-top: 25px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+    
+
+    
+}
+.video iframe{
+    height: 90%;
+    width: 95%;
+    border-radius: 16px;
+}
