--- a/style.css
+++ b/style.css
@@ -248,7 +248,9 @@ margin-top: 20px;
     width: 1140px;
     height: 650px;
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
+
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
 }
 
@@ -292,12 +294,186 @@ margin-top: 20px;
     box-sizing: border-box;
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
-    
-
-    
 }
 .video iframe{
     height: 90%;
     width: 95%;
     border-radius: 16px;
+}
+
+/* My Current Target Section  */
+
+.current-target-box{
+
+    width: 1140px;
+    height: 460px;
+    border: 2px solid red;
+    margin: 0 auto;
+    margin-bottom: 70px;
+
+
+
+}
+.boxs{
+
+
+    width: 100%;
+    height: 350px;
+    border: 2px solid blue;
+    margin-top: 25px;
+
+    display: flex;
+    justify-content: space-between;
+
+    border-radius: 16px;
+
+}
+
+.boxs .box{
+    width: 33%;
+    border: 2px solid blue;
+    height: 318px;
+    padding: 30px 0 0 30px;
+}
+
+.boxs .box h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 15px;
+}
+.boxs .box .p1{
+
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+}
+.boxs .box .p2{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+}
+.box1 .p2{
+    margin-top: 40px;
+}
+.box2 .p2{
+    margin-top: 40px;
+
+}
+.box3 .p2{
+    margin-top: 14px;
+
+
+}
+
+
+/* My Next Target section  */
+
+.next-container{
+    width: 1140px;
+    height: 876px;
+    border:  2px solid black;
+    margin:  0 auto;
+
+}
+
+.titel-content{
+    border:  2px solid red;
+
+    
+}
+.titel-content h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+
+
+}
+.titel-content p{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center; 
+    opacity: 0.7;
+
+}
+
+.react-box{
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+
+    width: 1140px;
+    height: 219px;
+    border:  2px solid red;
+    margin-top: 40px;
+    display: flex;
+
+}
+
+.react-box .img-box{
+    padding-top: 60px;
+    padding-left: 30px;
+
+}
+.react-box .contents-box{
+    padding-top: 38px;
+    padding-left: 20px;
+
+}
+.react-box .contents-box h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+    
+}
+.react-box .contents-box .p1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+    opacity: 0.7;
+    margin-top: 15px;
+
+
+}
+.react-box .contents-box .p2{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+    margin-top: 15px;
+
 }
