--- a/style.css
+++ b/style.css
@@ -477,3 +477,85 @@ margin-top: 20px;
     margin-top: 15px;
 
 }
+
+/* second last section  */
+
+.second-last{
+
+    width: 1140px;
+    height: 313px;
+    margin: 0 auto;
+    border: 2px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+    background-image: url(./assets/handshake.jpg);
+    background-color: rgba(0, 0, 0, 0.4);
+    background-blend-mode: overlay;
+
+
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 16px;
+}
+   
+.second-last .content{
+
+    width: 1044px;
+    height: 185px;
+    border: 2px solid navy;
+    text-align: center;
+}
+.second-last .content h1{
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: center;
+    
+}
+.second-last .content p{
+    color: rgb(255, 255, 255);
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: center;
+    opacity: 0.7;
+    margin-top: 15px;
+
+
+}
+.second-last .content input{
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.15);
+    border-radius: 8px;
+    padding: 10px 20px 10px 20px;
+    background: rgb(255, 255, 255);
+    width: 548px;
+    height: 57px;
+    border: none;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+}
+.second-last .content button{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+    border-radius: 8px;
+    padding: 15px 20px 15px 20px;
+    background: rgb(255, 255, 255);
+    margin-top: 31px;
+    margin-left: 10px;
+    
+
+}
