--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
     justify-content: space-between;
      align-items: center;
     height: 90px;
-    max-width:1310px;
+    max-width: 1440px;
     border: 2px solid red;
     margin:  0 auto;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 35px;
+    padding-right: 35px;
 
 }
 
@@ -556,6 +556,36 @@ margin-top: 20px;
     background: rgb(255, 255, 255);
     margin-top: 31px;
     margin-left: 10px;
-    
+}
 
+/* footer  */
+.footer{
+    max-width: 1500px;
+    height: 100px;
+    margin: 0 auto;
+    border:  2px solid black;
+
+    border-radius: 16px;
+
+    background: rgba(13, 19, 33, 0.05);
+
+    margin-top: 60px;
+    display: flex;
+    align-items: center;
+    padding:  0 190px;
+    justify-content: space-between;
+}
+.footer h1{
+    color: rgb(13, 19, 33);
+    font-family: Azeret Mono;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 23px;
+    letter-spacing: 0%;
+    text-align: center;
+}
+.footer-icons{
+    display: flex;
+    gap: 12px;
+    cursor: pointer;
 }
