--- a/style.css
+++ b/style.css
@@ -5,17 +5,16 @@
     padding: 0;
     text-decoration:none;
 }
+
 .nav{
     display: flex;
     justify-content: space-between;
      align-items: center;
     height: 90px;
     max-width: 1440px;
-    border: 2px solid red;
     margin:  0 auto;
     padding-left: 35px;
     padding-right: 35px;
-
 }
 
 .nav .btn{
@@ -31,14 +30,18 @@
     line-height: 23px;
     letter-spacing: 0%;
     text-align: center;
-    
+    cursor: pointer;
 }
-
+.nav .btn:hover{
+    background-color: red;
+    color: white;
+}
 
 ul li {
     list-style: none;
 
 }
+
 ul li a {
     color: rgb(13, 19, 33);
     font-family: Azeret Mono;
@@ -54,7 +57,6 @@ ul li a {
 
     max-width:1510px;
     height: 652px;
-    border: 2px solid red;
     margin:  0 auto;
 
     display: flex;
@@ -71,30 +73,29 @@ ul li a {
 
     width: 998px;
     height: 582px;
-    border: 2px solid red;
     margin: 0 auto;
     text-align: center;
 
 }
 .content-container h1{
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 48px;
-font-weight: 800;
-line-height: 68px;
-letter-spacing: 0%;
-text-align: center;
+    font-family: Azeret Mono;
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 68px;
+    letter-spacing: 0%;
+    text-align: center;
     
 }
 .content-container p{
     color: rgb(13, 19, 33);
-font-family: Azeret Mono;
-font-size: 16px;
-font-weight: 400;
-line-height: 26px;
-text-align: center;
-opacity: 0.7;
-margin-top: 20px;
+    font-family: Azeret Mono;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    text-align: center;
+    opacity: 0.7;
+    margin-top: 20px;
 }
 
 .content-container .btn{
@@ -110,6 +111,9 @@ margin-top: 20px;
     margin-top: 50px;
 
 }
+.content-container .btn:hover{
+    background-color: green;
+}
 
 
 /* About web development section  */
@@ -117,7 +121,6 @@ margin-top: 20px;
 .main-container{
     width: 1140px;
     height: 1373px;
-    border: 2px solid red;
     margin:  0 auto;
     border-radius: 16px;
     background: rgba(13, 19, 33, 0.02);
@@ -132,13 +135,6 @@ margin-top: 20px;
 .second-main-container{
     width: 946px;
     height: 1190px;
-    border: 2px solid red;
-
-
-}
-.content-box {
-    border: 2px solid red;
-    
 }
 
 .content-box h1{
@@ -165,11 +161,9 @@ margin-top: 20px;
 .second-content-box{
     width: 946px;
     height: 300px;
-    border: 2px solid red;
     margin-top: 30px;
 
     display: flex;  
-    background-color: red;
     border-radius: 16px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
@@ -178,7 +172,6 @@ margin-top: 20px;
 .second-content-box .content{
     width: 45%;
     height: 82%;
-    border: 2px solid red;
     margin: 25px auto;
 
 
@@ -223,6 +216,11 @@ margin-top: 20px;
     padding: 12px 20px 12px 20px;
     margin-top: 40px;
     width: 42%;
+    cursor: pointer;
+}
+.second-content-box .content .span:hover{
+    background-color: green;
+    color: white;
 }
 .second-content-box .box-two-image{
     width: 350px;
@@ -242,9 +240,6 @@ margin-top: 20px;
 
 
 .container-div{
-
-
-    border: 2px solid red;
     width: 1140px;
     height: 650px;
     margin: 0 auto;
@@ -255,7 +250,6 @@ margin-top: 20px;
 }
 
 .titels{
-    border: 2px solid red;
     text-align: center;
     width: 70%;
     margin:  0 auto;
@@ -307,7 +301,6 @@ margin-top: 20px;
 
     width: 1140px;
     height: 460px;
-    border: 2px solid red;
     margin: 0 auto;
     margin-bottom: 70px;
 
@@ -319,11 +312,11 @@ margin-top: 20px;
 
     width: 100%;
     height: 350px;
-    border: 2px solid blue;
     margin-top: 25px;
 
     display: flex;
     justify-content: space-between;
+    gap: 15px;
 
     border-radius: 16px;
 
@@ -331,9 +324,9 @@ margin-top: 20px;
 
 .boxs .box{
     width: 33%;
-    border: 2px solid blue;
     height: 318px;
     padding: 30px 0 0 30px;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 
 .boxs .box h1{
@@ -365,6 +358,12 @@ margin-top: 20px;
     letter-spacing: 0%;
     text-align: left;
     text-decoration-line: underline;
+    cursor: pointer;
+}
+
+.boxs .box .p2:hover{
+    color: red;
+
 }
 .box1 .p2{
     margin-top: 40px;
@@ -385,13 +384,11 @@ margin-top: 20px;
 .next-container{
     width: 1140px;
     height: 876px;
-    border:  2px solid black;
     margin:  0 auto;
 
 }
 
 .titel-content{
-    border:  2px solid red;
 
     
 }
@@ -426,7 +423,6 @@ margin-top: 20px;
 
     width: 1140px;
     height: 219px;
-    border:  2px solid red;
     margin-top: 40px;
     display: flex;
 
@@ -475,7 +471,12 @@ margin-top: 20px;
     text-align: left;
     text-decoration-line: underline;
     margin-top: 15px;
+    cursor: pointer;
 
+}
+
+.react-box .contents-box .p2:hover{
+    color:red;
 }
 
 /* second last section  */
@@ -485,7 +486,6 @@ margin-top: 20px;
     width: 1140px;
     height: 313px;
     margin: 0 auto;
-    border: 2px solid red;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -505,7 +505,6 @@ margin-top: 20px;
 
     width: 1044px;
     height: 185px;
-    border: 2px solid navy;
     text-align: center;
 }
 .second-last .content h1{
@@ -556,6 +555,12 @@ margin-top: 20px;
     background: rgb(255, 255, 255);
     margin-top: 31px;
     margin-left: 10px;
+    cursor: pointer;
+}
+
+.second-last .content button:hover{
+    background-color: green;
+    color: white;
 }
 
 /* footer  */
@@ -563,7 +568,6 @@ margin-top: 20px;
     max-width: 1500px;
     height: 100px;
     margin: 0 auto;
-    border:  2px solid black;
 
     border-radius: 16px;
 
@@ -588,4 +592,15 @@ margin-top: 20px;
     display: flex;
     gap: 12px;
     cursor: pointer;
+}
+.footer-icons .one:hover{
+
+    transform:scale(1.2)translateY(-2px) ;
+
+}
+.footer-icons .two:hover{
+    transform:scale(1.2)translateY(-2px) ;
+}
+.footer-icons .three:hover{
+transform:scale(1.2)translateY(-2px) ;
 }
