--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
     padding: 17px 24px 17px 24px;
     opacity: 0.8;
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 20px;
     font-weight: 600;
     line-height: 23px;
@@ -44,7 +44,7 @@ ul li {
 
 ul li a {
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 28px;
     font-weight: 800;
     line-height: 33px;
@@ -79,7 +79,7 @@ ul li a {
 }
 .content-container h1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 48px;
     font-weight: 800;
     line-height: 68px;
@@ -89,7 +89,7 @@ ul li a {
 }
 .content-container p{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -103,7 +103,7 @@ ul li a {
     border-radius: 8px;
     background: rgb(13, 19, 33);
     color: rgb(255, 255, 255);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 20px;
     font-weight: 600;
     line-height: 23px;
@@ -139,7 +139,7 @@ ul li a {
 
 .content-box h1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 32px;
     font-weight: 800;
     line-height: 37px;
@@ -149,7 +149,7 @@ ul li a {
 }
 .content-box p{ 
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -183,7 +183,7 @@ ul li a {
 .second-content-box .content h1{
 
     color: rgba(13, 19, 33, 0.7);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 24px;
     font-weight: 700;
     line-height: 36px;
@@ -193,7 +193,7 @@ ul li a {
 }
 .second-content-box .content p{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -208,7 +208,7 @@ ul li a {
     opacity: 0.7;
 
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 20px;
     font-weight: 600;
     line-height: 20px;
@@ -241,9 +241,10 @@ ul li a {
 
 .container-div{
     width: 1140px;
-    height: 650px;
+    height: 642px;
     margin: 0 auto;
     margin-bottom: 80px;
+    border-radius: 16px;
 
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 
@@ -256,7 +257,7 @@ ul li a {
 }
 .titels h1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 32px;
     font-weight: 800;
     line-height: 37px;
@@ -266,7 +267,7 @@ ul li a {
 .titels p{
 
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -330,7 +331,7 @@ ul li a {
 
 .boxs .box h1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 24px;
     font-weight: 800;
     line-height: 36px;
@@ -341,7 +342,7 @@ ul li a {
 .boxs .box .p1{
 
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -350,7 +351,7 @@ ul li a {
 }
 .boxs .box .p2{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 700;
     line-height: 19px;
@@ -389,7 +390,7 @@ ul li a {
 
 .titel-content h1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 32px;
     font-weight: 800;
     line-height: 37px;
@@ -400,7 +401,7 @@ ul li a {
 }
 .titel-content p{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -436,7 +437,7 @@ ul li a {
 }
 .react-box .contents-box h1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 24px;
     font-weight: 800;
     line-height: 36px;
@@ -446,7 +447,7 @@ ul li a {
 }
 .react-box .contents-box .p1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -459,7 +460,7 @@ ul li a {
 }
 .react-box .contents-box .p2{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 700;
     line-height: 19px;
@@ -505,7 +506,7 @@ ul li a {
 }
 .second-last .content h1{
     color: rgb(255, 255, 255);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 32px;
     font-weight: 700;
     line-height: 36px;
@@ -515,7 +516,7 @@ ul li a {
 }
 .second-last .content p{
     color: rgb(255, 255, 255);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
@@ -540,7 +541,7 @@ ul li a {
 }
 .second-last .content button{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 20px;
     font-weight: 600;
     line-height: 23px;
@@ -577,7 +578,7 @@ ul li a {
 }
 .footer h1{
     color: rgb(13, 19, 33);
-    font-family: Azeret Mono;
+    font-family: "Azeret Mono", monospace;
     font-size: 20px;
     font-weight: 600;
     line-height: 23px;
